--- a/src/librarymanagement/Book_Add.form
+++ b/src/librarymanagement/Book_Add.form
@@ -77,8 +77,8 @@
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="txtFieldBookEdition" max="32767" attributes="0"/>
                               <Component id="txtFieldBookTitle" alignment="0" max="32767" attributes="0"/>
-                              <Component id="txtFieldBookPublisher" alignment="0" max="32767" attributes="0"/>
-                              <Component id="txtFieldBookPublisherID" max="32767" attributes="0"/>
+                              <Component id="txtFieldPublisherId" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txtFieldPublisherName" max="32767" attributes="0"/>
                               <Component id="txtFieldBookPages" max="32767" attributes="0"/>
                               <Component id="txtFieldBookPurchaseDate" min="-2" pref="200" max="-2" attributes="0"/>
                           </Group>
@@ -109,12 +109,12 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtFieldBookPublisher" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtFieldPublisherId" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtFieldBookPublisherID" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtFieldPublisherName" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -207,6 +207,9 @@
               <Font name="Inter" size="12" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtFieldBookIDActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -216,7 +219,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="cc" green="cc" red="cc" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="(Press Enter to fill)"/>
+            <Property name="text" type="java.lang.String" value="(Press Enter to get latest)"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
@@ -237,12 +240,15 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtFieldBookPublisher">
+        <Component class="javax.swing.JTextField" name="txtFieldPublisherId">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Inter" size="12" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtFieldPublisherIdActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
@@ -252,7 +258,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="cc" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Publisher:"/>
+            <Property name="text" type="java.lang.String" value="Publisher ID:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtFieldBookPages">
@@ -281,15 +287,18 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="cc" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Publisher ID:"/>
+            <Property name="text" type="java.lang.String" value="Publisher:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtFieldBookPublisherID">
+        <Component class="javax.swing.JTextField" name="txtFieldPublisherName">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Inter" size="12" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtFieldPublisherNameActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtFieldBookEdition">
           <Properties>
@@ -404,7 +413,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="cc" green="cc" red="cc" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="(DD-MM-YYYY)"/>
+            <Property name="text" type="java.lang.String" value="(YYYY-MM-DD)"/>
           </Properties>
         </Component>
       </SubComponents>
