--- a/src/librarymanagement/Member_Delete.form
+++ b/src/librarymanagement/Member_Delete.form
@@ -108,7 +108,7 @@
                       <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtFieldMemberDues" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="46" max="32767" attributes="0"/>
+                  <EmptySpace pref="42" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="buttonClear" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="buttonDeleteData" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -204,6 +204,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Delete Data"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonDeleteDataActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="buttonHome">
           <Properties>
@@ -252,7 +255,7 @@
                   <Font name="Inter" size="12" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="7" rowCount="3">
+                  <Table columnCount="8" rowCount="0">
                     <Column editable="false" title="ID" type="java.lang.Integer"/>
                     <Column editable="false" title="Name" type="java.lang.String"/>
                     <Column editable="false" title="Address" type="java.lang.String"/>
@@ -260,10 +263,16 @@
                     <Column editable="false" title="Email" type="java.lang.String"/>
                     <Column editable="false" title="Member From" type="java.lang.String"/>
                     <Column editable="false" title="Membership Fee" type="java.lang.Double"/>
+                    <Column editable="false" title="Dues" type="java.lang.Double"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="10" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
@@ -301,6 +310,7 @@
                     </Column>
                   </TableColumnModel>
                 </Property>
+                <Property name="rowHeight" type="int" value="30"/>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
@@ -335,6 +345,9 @@
         <Component class="javax.swing.JTextField" name="txtFieldMemberDues">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="0"/>
+            </Property>
           </Properties>
         </Component>
       </SubComponents>
